# Simple-Blog

./: README.md  database.sqlite3
Client-C#-MAUI/: README.md
Client-C#-MAUI/SimpleBlogMauiApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiProgram.cs  SimpleBlogMauiApp.csproj  SimpleBlogMauiApp.sln
Client-Dart-Flutter/: README.md
Client-Dart-Flutter/simple_blog_flutter_application/: README.md  pubspec.yaml
Client-Javascript-React/: README.md  package-lock.json  package.json
Client-Javascript-React/src/: Api.js  App.js  Footer.js  Header.js  Login.js  PageEdit.js  PageList.js  ShowAlert.js
Server-C#-EntityFramework/: README.md
Server-C#-EntityFramework/WebApplication1/: Program.cs  ServicesExtension.cs  WebApplication1.csproj  WebApplication1.http  WebApplication1.sln  appsettings.json
Server-Go-Fiber/: .env  README.md  go.mod  go.sum  main.go
Server-Go-Fiber/entity/: page.go  user.go
Server-Go-Fiber/handler/: helper.go  page_handler.go  user_handler.go
Server-Go-Fiber/view/: error.tpl.html  page_detail.tpl.html  page_list.tpl.html
Server-Java-SpringMVC/: README.md  pom.xml
Server-PHP-Symfony/: .env  README.md  composer.json
Server-Python-Django/: .gitignore  README.md  requirements.txt
Server-Rust-Axum/: .env  Cargo.toml  README.md
Server-Rust-Axum/src/: main.rs  request_contracts.rs  response_contracts.rs  token.rs
Server-Rust-Axum/src/entities/: page.rs  user.rs
Server-Rust-Axum/src/handlers/: page.rs  user.rs
Server-Rust-Axum/src/templates/: detail.html  error.html  list.html
Server-Rust-Axum/static/: index.html
(+96 files in other folders)
