[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = "0.10.1"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
minijinja = "2.10.2"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "tls-native-tls"] } 
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["fs", "cors", "trace"] }
